intercode/parser.output
Grammar

    0 $accept: Program $end

    1 Program: ClassDef ClassDefList

    2 ClassDefList: ClassDefList ClassDef
    3             | %empty

    4 ClassDef: KEY_CLASS IDENTIFIER '{' Fields '}'
    5         | KEY_CLASS IDENTIFIER KEY_EXTENDS IDENTIFIER '{' Fields '}'

    6 Fields: VariableDef Fields
    7       | FunctionDef Fields
    8       | %empty

    9 VariableDef: Variable ';'

   10 Variable: Type IDENTIFIER

   11 Type: TYPE_INTEGER
   12     | TYPE_FLOAT
   13     | TYPE_BOOL
   14     | TYPE_STRING
   15     | TYPE_VOID
   16     | KEY_CLASS IDENTIFIER
   17     | Type '[' ']'

   18 Formals: FormalList
   19        | %empty

   20 FormalList: FormalList ',' Variable
   21           | Variable

   22 FunctionDef: Type IDENTIFIER '(' Formals ')' StmtBlock
   23            | KEY_STATIC Type IDENTIFIER '(' Formals ')' StmtBlock

   24 StmtBlock: '{' StmtList '}'

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: VariableDef
   28     | SimpleStmt ';'
   29     | IfStmt
   30     | WhileStmt
   31     | ForStmt
   32     | BreakStmt ';'
   33     | ReturnStmt ';'
   34     | PrintStmt ';'
   35     | StmtBlock

   36 SimpleStmt: LValue '=' Expr
   37           | %empty

   38 LValue: IDENTIFIER
   39       | Expr '[' Expr ']'
   40       | Expr '.' IDENTIFIER

   41 Call: IDENTIFIER '(' Actuals ')'
   42     | Expr '.' IDENTIFIER '(' Actuals ')'

   43 Actuals: ExprList
   44        | %empty

   45 ExprList: ExprList ',' Expr
   46         | Expr

   47 ForStmt: KEY_FOR '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt

   48 WhileStmt: KEY_WHILE '(' BoolExpr ')' Stmt

   49 IfStmt: KEY_IF '(' BoolExpr ')' Stmt
   50       | KEY_IF '(' BoolExpr ')' Stmt KEY_ELSE Stmt

   51 ReturnStmt: KEY_RETURN
   52           | KEY_RETURN Expr

   53 BreakStmt: KEY_BREAK

   54 PrintStmt: KEY_PRINT '(' ExprList ')'

   55 BoolExpr: Expr

   56 Expr: Constant
   57     | LValue
   58     | KEY_THIS
   59     | Call
   60     | '(' Expr ')'
   61     | Expr '+' Expr
   62     | Expr '-' Expr
   63     | Expr '*' Expr
   64     | Expr '/' Expr
   65     | Expr '%' Expr
   66     | '-' Expr
   67     | Expr '<' Expr
   68     | Expr OP_LE Expr
   69     | Expr '>' Expr
   70     | Expr OP_GE Expr
   71     | Expr OP_EQUAL Expr
   72     | Expr OP_NOTEQUAL Expr
   73     | Expr OP_AND Expr
   74     | Expr OP_OR Expr
   75     | '!' Expr
   76     | KEY_READINTEGER '(' ')'
   77     | KEY_READLINE '(' ')'
   78     | KEY_NEW IDENTIFIER '(' ')'
   79     | KEY_NEW Type '[' Expr ']'
   80     | KEY_INSTANCEOF '(' Expr ',' IDENTIFIER ')'
   81     | '(' KEY_CLASS IDENTIFIER ')' Expr

   82 Constant: CONSTANT_BOOL
   83         | CONSTANT_FLOAT
   84         | CONSTANT_FLOAT_SC
   85         | CONSTANT_INT_D
   86         | CONSTANT_INT_H
   87         | CONSTANT_STRING
   88         | CONSTANT_NULL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 75
'%' (37) 65
'(' (40) 22 23 41 42 47 48 49 50 54 60 76 77 78 80 81
')' (41) 22 23 41 42 47 48 49 50 54 60 76 77 78 80 81
'*' (42) 63
'+' (43) 61
',' (44) 20 45 80
'-' (45) 62 66
'.' (46) 40 42
'/' (47) 64
';' (59) 9 28 32 33 34 47
'<' (60) 67
'=' (61) 36
'>' (62) 69
'[' (91) 17 39 79
']' (93) 17 39 79
'{' (123) 4 5 24
'}' (125) 4 5 24
error (256)
KEY_CLASS (258) 4 5 16 81
KEY_RETURN (259) 51 52
KEY_FOR (260) 47
KEY_NEW (261) 78 79
KEY_THIS (262) 58
KEY_WHILE (263) 48
KEY_STATIC (264) 23
KEY_BREAK (265) 53
KEY_IF (266) 49 50
KEY_ELSE (267) 50
KEY_EXTENDS (268) 5
KEY_PRINT (269) 54
KEY_READINTEGER (270) 76
KEY_READLINE (271) 77
KEY_INSTANCEOF (272) 80
OP_LE (273) 68
OP_GE (274) 70
OP_EQUAL (275) 71
OP_NOTEQUAL (276) 72
OP_AND (277) 73
OP_OR (278) 74
TYPE_VOID (279) 15
TYPE_INTEGER (280) 11
TYPE_FLOAT (281) 12
TYPE_BOOL (282) 13
TYPE_STRING (283) 14
CONSTANT_BOOL (284) 82
CONSTANT_INT_D (285) 85
CONSTANT_INT_H (286) 86
CONSTANT_FLOAT (287) 83
CONSTANT_FLOAT_SC (288) 84
CONSTANT_STRING (289) 87
CONSTANT_NULL (290) 88
IDENTIFIER (291) 4 5 10 16 22 23 38 40 41 42 78 80 81
UMINUS (292)
SINGLE_IF (293)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
Program (58)
    on left: 1, on right: 0
ClassDefList (59)
    on left: 2 3, on right: 1 2
ClassDef (60)
    on left: 4 5, on right: 1 2
Fields (61)
    on left: 6 7 8, on right: 4 5 6 7
VariableDef (62)
    on left: 9, on right: 6 27
Variable (63)
    on left: 10, on right: 9 20 21
Type (64)
    on left: 11 12 13 14 15 16 17, on right: 10 17 22 23 79
Formals (65)
    on left: 18 19, on right: 22 23
FormalList (66)
    on left: 20 21, on right: 18 20
FunctionDef (67)
    on left: 22 23, on right: 7
StmtBlock (68)
    on left: 24, on right: 22 23 35
StmtList (69)
    on left: 25 26, on right: 24 25
Stmt (70)
    on left: 27 28 29 30 31 32 33 34 35, on right: 25 47 48 49 50
SimpleStmt (71)
    on left: 36 37, on right: 28 47
LValue (72)
    on left: 38 39 40, on right: 36 57
Call (73)
    on left: 41 42, on right: 59
Actuals (74)
    on left: 43 44, on right: 41 42
ExprList (75)
    on left: 45 46, on right: 43 45 54
ForStmt (76)
    on left: 47, on right: 31
WhileStmt (77)
    on left: 48, on right: 30
IfStmt (78)
    on left: 49 50, on right: 29
ReturnStmt (79)
    on left: 51 52, on right: 33
BreakStmt (80)
    on left: 53, on right: 32
PrintStmt (81)
    on left: 54, on right: 34
BoolExpr (82)
    on left: 55, on right: 47 48 49 50
Expr (83)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80 81, on right: 36 39 40 42 45 46 52 55 60 61
    62 63 64 65 66 67 68 69 70 71 72 73 74 75 79 80 81
Constant (84)
    on left: 82 83 84 85 86 87 88, on right: 56


State 0

    0 $accept: . Program $end

    KEY_CLASS  shift, and go to state 1

    Program   go to state 2
    ClassDef  go to state 3


State 1

    4 ClassDef: KEY_CLASS . IDENTIFIER '{' Fields '}'
    5         | KEY_CLASS . IDENTIFIER KEY_EXTENDS IDENTIFIER '{' Fields '}'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: ClassDef . ClassDefList

    $default  reduce using rule 3 (ClassDefList)

    ClassDefList  go to state 6


State 4

    4 ClassDef: KEY_CLASS IDENTIFIER . '{' Fields '}'
    5         | KEY_CLASS IDENTIFIER . KEY_EXTENDS IDENTIFIER '{' Fields '}'

    KEY_EXTENDS  shift, and go to state 7
    '{'          shift, and go to state 8


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    1 Program: ClassDef ClassDefList .
    2 ClassDefList: ClassDefList . ClassDef

    KEY_CLASS  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    ClassDef  go to state 9


State 7

    5 ClassDef: KEY_CLASS IDENTIFIER KEY_EXTENDS . IDENTIFIER '{' Fields '}'

    IDENTIFIER  shift, and go to state 10


State 8

    4 ClassDef: KEY_CLASS IDENTIFIER '{' . Fields '}'

    KEY_CLASS     shift, and go to state 11
    KEY_STATIC    shift, and go to state 12
    TYPE_VOID     shift, and go to state 13
    TYPE_INTEGER  shift, and go to state 14
    TYPE_FLOAT    shift, and go to state 15
    TYPE_BOOL     shift, and go to state 16
    TYPE_STRING   shift, and go to state 17

    $default  reduce using rule 8 (Fields)

    Fields       go to state 18
    VariableDef  go to state 19
    Variable     go to state 20
    Type         go to state 21
    FunctionDef  go to state 22


State 9

    2 ClassDefList: ClassDefList ClassDef .

    $default  reduce using rule 2 (ClassDefList)


State 10

    5 ClassDef: KEY_CLASS IDENTIFIER KEY_EXTENDS IDENTIFIER . '{' Fields '}'

    '{'  shift, and go to state 23


State 11

   16 Type: KEY_CLASS . IDENTIFIER

    IDENTIFIER  shift, and go to state 24


State 12

   23 FunctionDef: KEY_STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock

    KEY_CLASS     shift, and go to state 11
    TYPE_VOID     shift, and go to state 13
    TYPE_INTEGER  shift, and go to state 14
    TYPE_FLOAT    shift, and go to state 15
    TYPE_BOOL     shift, and go to state 16
    TYPE_STRING   shift, and go to state 17

    Type  go to state 25


State 13

   15 Type: TYPE_VOID .

    $default  reduce using rule 15 (Type)


State 14

   11 Type: TYPE_INTEGER .

    $default  reduce using rule 11 (Type)


State 15

   12 Type: TYPE_FLOAT .

    $default  reduce using rule 12 (Type)


State 16

   13 Type: TYPE_BOOL .

    $default  reduce using rule 13 (Type)


State 17

   14 Type: TYPE_STRING .

    $default  reduce using rule 14 (Type)


State 18

    4 ClassDef: KEY_CLASS IDENTIFIER '{' Fields . '}'

    '}'  shift, and go to state 26


State 19

    6 Fields: VariableDef . Fields

    KEY_CLASS     shift, and go to state 11
    KEY_STATIC    shift, and go to state 12
    TYPE_VOID     shift, and go to state 13
    TYPE_INTEGER  shift, and go to state 14
    TYPE_FLOAT    shift, and go to state 15
    TYPE_BOOL     shift, and go to state 16
    TYPE_STRING   shift, and go to state 17

    $default  reduce using rule 8 (Fields)

    Fields       go to state 27
    VariableDef  go to state 19
    Variable     go to state 20
    Type         go to state 21
    FunctionDef  go to state 22


State 20

    9 VariableDef: Variable . ';'

    ';'  shift, and go to state 28


State 21

   10 Variable: Type . IDENTIFIER
   17 Type: Type . '[' ']'
   22 FunctionDef: Type . IDENTIFIER '(' Formals ')' StmtBlock

    '['         shift, and go to state 29
    IDENTIFIER  shift, and go to state 30


State 22

    7 Fields: FunctionDef . Fields

    KEY_CLASS     shift, and go to state 11
    KEY_STATIC    shift, and go to state 12
    TYPE_VOID     shift, and go to state 13
    TYPE_INTEGER  shift, and go to state 14
    TYPE_FLOAT    shift, and go to state 15
    TYPE_BOOL     shift, and go to state 16
    TYPE_STRING   shift, and go to state 17

    $default  reduce using rule 8 (Fields)

    Fields       go to state 31
    VariableDef  go to state 19
    Variable     go to state 20
    Type         go to state 21
    FunctionDef  go to state 22


State 23

    5 ClassDef: KEY_CLASS IDENTIFIER KEY_EXTENDS IDENTIFIER '{' . Fields '}'

    KEY_CLASS     shift, and go to state 11
    KEY_STATIC    shift, and go to state 12
    TYPE_VOID     shift, and go to state 13
    TYPE_INTEGER  shift, and go to state 14
    TYPE_FLOAT    shift, and go to state 15
    TYPE_BOOL     shift, and go to state 16
    TYPE_STRING   shift, and go to state 17

    $default  reduce using rule 8 (Fields)

    Fields       go to state 32
    VariableDef  go to state 19
    Variable     go to state 20
    Type         go to state 21
    FunctionDef  go to state 22


State 24

   16 Type: KEY_CLASS IDENTIFIER .

    $default  reduce using rule 16 (Type)


State 25

   17 Type: Type . '[' ']'
   23 FunctionDef: KEY_STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock

    '['         shift, and go to state 29
    IDENTIFIER  shift, and go to state 33


State 26

    4 ClassDef: KEY_CLASS IDENTIFIER '{' Fields '}' .

    $default  reduce using rule 4 (ClassDef)


State 27

    6 Fields: VariableDef Fields .

    $default  reduce using rule 6 (Fields)


State 28

    9 VariableDef: Variable ';' .

    $default  reduce using rule 9 (VariableDef)


State 29

   17 Type: Type '[' . ']'

    ']'  shift, and go to state 34


State 30

   10 Variable: Type IDENTIFIER .
   22 FunctionDef: Type IDENTIFIER . '(' Formals ')' StmtBlock

    '('  shift, and go to state 35

    $default  reduce using rule 10 (Variable)


State 31

    7 Fields: FunctionDef Fields .

    $default  reduce using rule 7 (Fields)


State 32

    5 ClassDef: KEY_CLASS IDENTIFIER KEY_EXTENDS IDENTIFIER '{' Fields . '}'

    '}'  shift, and go to state 36


State 33

   23 FunctionDef: KEY_STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock

    '('  shift, and go to state 37


State 34

   17 Type: Type '[' ']' .

    $default  reduce using rule 17 (Type)


State 35

   22 FunctionDef: Type IDENTIFIER '(' . Formals ')' StmtBlock

    KEY_CLASS     shift, and go to state 11
    TYPE_VOID     shift, and go to state 13
    TYPE_INTEGER  shift, and go to state 14
    TYPE_FLOAT    shift, and go to state 15
    TYPE_BOOL     shift, and go to state 16
    TYPE_STRING   shift, and go to state 17

    $default  reduce using rule 19 (Formals)

    Variable    go to state 38
    Type        go to state 39
    Formals     go to state 40
    FormalList  go to state 41


State 36

    5 ClassDef: KEY_CLASS IDENTIFIER KEY_EXTENDS IDENTIFIER '{' Fields '}' .

    $default  reduce using rule 5 (ClassDef)


State 37

   23 FunctionDef: KEY_STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock

    KEY_CLASS     shift, and go to state 11
    TYPE_VOID     shift, and go to state 13
    TYPE_INTEGER  shift, and go to state 14
    TYPE_FLOAT    shift, and go to state 15
    TYPE_BOOL     shift, and go to state 16
    TYPE_STRING   shift, and go to state 17

    $default  reduce using rule 19 (Formals)

    Variable    go to state 38
    Type        go to state 39
    Formals     go to state 42
    FormalList  go to state 41


State 38

   21 FormalList: Variable .

    $default  reduce using rule 21 (FormalList)


State 39

   10 Variable: Type . IDENTIFIER
   17 Type: Type . '[' ']'

    '['         shift, and go to state 29
    IDENTIFIER  shift, and go to state 43


State 40

   22 FunctionDef: Type IDENTIFIER '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 44


State 41

   18 Formals: FormalList .
   20 FormalList: FormalList . ',' Variable

    ','  shift, and go to state 45

    $default  reduce using rule 18 (Formals)


State 42

   23 FunctionDef: KEY_STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 46


State 43

   10 Variable: Type IDENTIFIER .

    $default  reduce using rule 10 (Variable)


State 44

   22 FunctionDef: Type IDENTIFIER '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 47

    StmtBlock  go to state 48


State 45

   20 FormalList: FormalList ',' . Variable

    KEY_CLASS     shift, and go to state 11
    TYPE_VOID     shift, and go to state 13
    TYPE_INTEGER  shift, and go to state 14
    TYPE_FLOAT    shift, and go to state 15
    TYPE_BOOL     shift, and go to state 16
    TYPE_STRING   shift, and go to state 17

    Variable  go to state 49
    Type      go to state 39


State 46

   23 FunctionDef: KEY_STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 47

    StmtBlock  go to state 50


State 47

   24 StmtBlock: '{' . StmtList '}'

    KEY_CLASS          shift, and go to state 11
    KEY_RETURN         shift, and go to state 51
    KEY_FOR            shift, and go to state 52
    KEY_NEW            shift, and go to state 53
    KEY_THIS           shift, and go to state 54
    KEY_WHILE          shift, and go to state 55
    KEY_BREAK          shift, and go to state 56
    KEY_IF             shift, and go to state 57
    KEY_PRINT          shift, and go to state 58
    KEY_READINTEGER    shift, and go to state 59
    KEY_READLINE       shift, and go to state 60
    KEY_INSTANCEOF     shift, and go to state 61
    '-'                shift, and go to state 62
    '!'                shift, and go to state 63
    '('                shift, and go to state 64
    '{'                shift, and go to state 47
    TYPE_VOID          shift, and go to state 13
    TYPE_INTEGER       shift, and go to state 14
    TYPE_FLOAT         shift, and go to state 15
    TYPE_BOOL          shift, and go to state 16
    TYPE_STRING        shift, and go to state 17
    CONSTANT_BOOL      shift, and go to state 65
    CONSTANT_INT_D     shift, and go to state 66
    CONSTANT_INT_H     shift, and go to state 67
    CONSTANT_FLOAT     shift, and go to state 68
    CONSTANT_FLOAT_SC  shift, and go to state 69
    CONSTANT_STRING    shift, and go to state 70
    CONSTANT_NULL      shift, and go to state 71
    IDENTIFIER         shift, and go to state 72

    ';'       reduce using rule 37 (SimpleStmt)
    $default  reduce using rule 26 (StmtList)

    VariableDef  go to state 73
    Variable     go to state 20
    Type         go to state 39
    StmtBlock    go to state 74
    StmtList     go to state 75
    Stmt         go to state 76
    SimpleStmt   go to state 77
    LValue       go to state 78
    Call         go to state 79
    ForStmt      go to state 80
    WhileStmt    go to state 81
    IfStmt       go to state 82
    ReturnStmt   go to state 83
    BreakStmt    go to state 84
    PrintStmt    go to state 85
    Expr         go to state 86
    Constant     go to state 87


State 48

   22 FunctionDef: Type IDENTIFIER '(' Formals ')' StmtBlock .

    $default  reduce using rule 22 (FunctionDef)


State 49

   20 FormalList: FormalList ',' Variable .

    $default  reduce using rule 20 (FormalList)


State 50

   23 FunctionDef: KEY_STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .

    $default  reduce using rule 23 (FunctionDef)


State 51

   51 ReturnStmt: KEY_RETURN .
   52           | KEY_RETURN . Expr

    KEY_NEW            shift, and go to state 53
    KEY_THIS           shift, and go to state 54
    KEY_READINTEGER    shift, and go to state 59
    KEY_READLINE       shift, and go to state 60
    KEY_INSTANCEOF     shift, and go to state 61
    '-'                shift, and go to state 62
    '!'                shift, and go to state 63
    '('                shift, and go to state 64
    CONSTANT_BOOL      shift, and go to state 65
    CONSTANT_INT_D     shift, and go to state 66
    CONSTANT_INT_H     shift, and go to state 67
    CONSTANT_FLOAT     shift, and go to state 68
    CONSTANT_FLOAT_SC  shift, and go to state 69
    CONSTANT_STRING    shift, and go to state 70
    CONSTANT_NULL      shift, and go to state 71
    IDENTIFIER         shift, and go to state 72

    $default  reduce using rule 51 (ReturnStmt)

    LValue    go to state 88
    Call      go to state 79
    Expr      go to state 89
    Constant  go to state 87


State 52

   47 ForStmt: KEY_FOR . '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt

    '('  shift, and go to state 90


State 53

   78 Expr: KEY_NEW . IDENTIFIER '(' ')'
   79     | KEY_NEW . Type '[' Expr ']'
